# Visionary

./: .gitignore  CMakeLists.txt
Themes/: default.json
src/: BufferPos.hpp  Config.hpp  Cursor.cpp  Cursor.h  CursorLocation.hpp  Drawable.hpp  FontManager.hpp  LineIndicator.cpp  LineIndicator.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  Theme.hpp  main.cpp
